<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/horizontal_border"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="#e52612"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vertical_border"
        android:layout_width="3dp"
        android:layout_height="200dp"
        android:background="#e52612"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/logs_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:padding="20dp"
        android:src="@drawable/icons8history48"
        app:layout_constraintEnd_toStartOf="@+id/vertical_border"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_border" />

    <ImageButton
        android:id="@+id/records_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/icons8trophy48"
        app:layout_constraintStart_toStartOf="@+id/vertical_border"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_border" />

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_border"
        app:layout_constraintEnd_toStartOf="@+id/vertical_border"
        app:srcCompat="@drawable/icons8dumbell48" />

    <ImageButton
        android:id="@+id/routines_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_border"
        app:layout_constraintStart_toStartOf="@+id/vertical_border"
        app:srcCompat="@drawable/icons8list" />

    <TextView
        android:id="@+id/workouts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/routines"
        app:layout_constraintEnd_toEndOf="@+id/routines_button"
        app:layout_constraintStart_toStartOf="@+id/routines_button"
        app:layout_constraintTop_toBottomOf="@+id/routines_button" />

    <TextView
        android:id="@+id/history_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/logs"
        app:layout_constraintEnd_toEndOf="@+id/logs_button"
        app:layout_constraintStart_toStartOf="@+id/logs_button"
        app:layout_constraintTop_toBottomOf="@+id/logs_button" />

    <TextView
        android:id="@+id/records_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/records"
        app:layout_constraintEnd_toEndOf="@+id/records_button"
        app:layout_constraintStart_toStartOf="@+id/records_button"
        app:layout_constraintTop_toBottomOf="@+id/records_button" />

    <TextView
        android:id="@+id/profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/exercises"
        app:layout_constraintEnd_toEndOf="@+id/profile_button"
        app:layout_constraintStart_toStartOf="@+id/profile_button"
        app:layout_constraintTop_toBottomOf="@+id/profile_button" />

</androidx.constraintlayout.widget.ConstraintLayout>